update:将不同框架的参数使用不同的类替换

--- a/inference_trt/src/CMakeLists.txt
+++ b/inference_trt/src/CMakeLists.txt
@@ -5,3 +5,7 @@ add_library(sampleEngines SHARED sampleEngines.cpp)
 add_library(sampleInference SHARED sampleInference.cpp)
 add_library(sampleOptions SHARED sampleOptions.cpp)
 add_library(sampleReporting SHARED sampleReporting.cpp)
+add_library(UffParams SHARED UffParams.cpp)
+add_library(ArgsBase SHARED ArgsBase.cpp)
+add_library(ONNXParams SHARED ONNXParams.cpp)
+add_library(CaffeParams SHARED CaffeParams.cpp)
