TensorRT推理项目优化

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,5 +29,6 @@ file(GLOB CUDA_LIBRARIES "${CUDA_LIB_PATH}/*.so")
 find_package(CUDA 11.0 REQUIRED)
 add_subdirectory(utils)
 add_subdirectory(common)
+add_subdirectory(demo)
 add_executable(${PROJECT_NAME} main.cpp)
 target_link_libraries(${PROJECT_NAME} logger mnistapi common)
