--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -2,6 +2,6 @@ include_directories(${CMAKE_SOURCE_DIR}/demo/include)
 file(GLOB UTILS_SOURCE ${CMAKE_SOURCE_DIR}/demo/src/*.cpp)
 file(GLOB TRT_LIBS "${TENSORRT_LIB_PATH}/*.so")
 file(GLOB CUDA_LIBS "${CUDA_LIB_PATH}/*.so")
-add_library(mnistapi SHARED ${UTILS_SOURCE})
-target_link_libraries(mnistapi ${TRT_LIBS} ${CUDA_LIBS})
+add_library(demo_lib SHARED ${UTILS_SOURCE})
+target_link_libraries(demo_lib ${TRT_LIBS} ${CUDA_LIBS})
 
