--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ add_subdirectory(utils)
 add_subdirectory(common)
 add_subdirectory(demo)
 add_subdirectory(plugin)
-add_executable(${PROJECT_NAME} uff_mnist.cpp)
+add_subdirectory(tools)
+#add_executable(${PROJECT_NAME} uff_mnist.cpp)
+add_executable(${PROJECT_NAME} sampleUffFasterRCNN.cpp)
 
 target_link_libraries(${PROJECT_NAME} logger demo_lib common)
