添加输入输出标准

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.20)
 project(trt_demo LANGUAGES CXX CUDA)
 
+find_package(CUDAToolkit)
+find_package(OpenCV)
 set(CMAKE_CXX_STANDARD 17)
 include(FetchContent)
 
@@ -27,15 +29,19 @@ add_definitions(-w)
 link_directories(${TENSORRT_HOME}/lib)
 message("CUDA HOME:${CUDA_HOME}")
 message("TensorRT HOME:${TENSORRT_HOME}")
-
+# 是否开启测试
+option(BUILD_TESTS "Build the tests" ON)
+if(BUILD_TESTS)
+  enable_testing()
+  add_subdirectory(tests)
+endif()
 file(GLOB TRT_LIBS "${TENSORRT_HOME}/lib/*.so")
 # CUDA配置
-find_package(CUDAToolkit)
-find_package(OpenCV)
 include_directories(${CUDA_HOME}/targets/x86_64-linux/include
                     ${TENSORRT_HOME}/include include)
 list(APPEND PROJECT_INCLUDES ${TENSORRT_HOME}/include)
 add_subdirectory(src)
+
 add_executable(${PROJECT_NAME} resnet.cc)
 
 FetchContent_Declare(
@@ -50,12 +56,5 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(argparse spdlog)
 
-target_link_libraries(
-  ${PROJECT_NAME}
-  ${TRT_LIBS}
-  CUDA::cudart
-  utils
-  ${TRT_LIBS}
-  ${OpenCV_LIBS}
-  argparse
-  spdlog::spdlog)
+target_link_libraries(${PROJECT_NAME} CUDA::cudart utils ${OpenCV_LIBS}
+                      argparse spdlog::spdlog)
