--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 include_directories(${CMAKE_SOURCE_DIR}/include)
 file(GLOB SRCS "*.cc")
 add_library(utils SHARED ${SRCS})
-target_link_libraries(utils)
+target_link_libraries(utils argparse ${TRT_LIBS})
